--- a/step-3.html
+++ b/step-3.html
@@ -7,7 +7,6 @@
     <style>
         #out1 {
             margin: 5px;
-            margin-left: 90px;
         }
         #upOut {
             display: grid;
@@ -16,7 +15,17 @@
         }
         #out6 {
             margin: 5px;
-            margin-left: 90px;
+        }
+        #round1 {
+            margin: 5px;
+        }
+        #upround {
+            display: grid;
+            grid-template-columns: 60px 50px 50px 50px;
+            margin: 5px;
+        }
+        #round6 {
+            margin: 5px;
         }
     </style>
 </head>
@@ -34,11 +43,18 @@ CUBE : <input type="text" onclick="this.select()" id="val">
 <button onclick="Round()">출력</button>
 </div>
 <div id="round"></div>
+<div id="round1"></div>
+<div id="upround">
+    <div id="round2"></div>
+    <div id="round3"></div>
+    <div id="round4"></div>
+    <div id="round5"></div>
+</div>
+<div id="round6"></div>
 
 <body>
     <script>
         document.getElementById('val').value = "(띄워쓰기로 구분해주세요!)"
-        var str = ["B", "W", "O", "G", "Y","R"]
         var b1 = ["B", "B", "B"];
         var b2 = ["B", "B", "B"];
         var b3 = ["B", "B", "B"];
@@ -63,7 +79,7 @@ CUBE : <input type="text" onclick="this.select()" id="val">
         var r2 = ["R", "R", "R"];
         var r3 = ["R", "R", "R"];
 
-        document.getElementById('out1').innerHTML = b1.join(" ") + '<br>' + b2.join(" ") +"<br>" + b3.join(" ");
+        document.getElementById('out1').innerHTML = b1.join(" ") + '<br>' + b2.join(" ") +"<br>" + b3.join(" ")
         document.getElementById('out2').innerHTML = w1.join(" ") + '<br>' + w2.join(" ") +"<br>" + w3.join(" ") +"<br>";
         document.getElementById('out3').innerHTML = o1.join(" ") + '<br>' + o2.join(" ") +"<br>" + o3.join(" ") +"<br>";
         document.getElementById('out4').innerHTML = g1.join(" ") + '<br>' + g2.join(" ") +"<br>" + g3.join(" ") +"<br>";
@@ -71,10 +87,14 @@ CUBE : <input type="text" onclick="this.select()" id="val">
         document.getElementById('out6').innerHTML = r1.join(" ") + '<br>' + r2.join(" ") +"<br>" + r3.join(" ");
 
         var operate = {};
-        operate.print = function(str) { 
+        operate.print = function(str) {
             document.getElementById('round').innerHTML += str+"<br>";
-           document.getElementById('round').innerHTML += a1.join(" ") + '<br>' + a2.join(" ") +"<br>" + a3.join(" ")+ "<br><br>";
-
+                document.getElementById('round1').innerHTML += b1.join(" ") + '<br>' + b2.join(" ") +"<br>" + b3.join(" ");
+                document.getElementById('round2').innerHTML += w1.join(" ") + '<br>' + w2.join(" ") +"<br>" + w3.join(" ") +"<br>";
+                document.getElementById('round3').innerHTML += o1.join(" ") + '<br>' + o2.join(" ") +"<br>" + o3.join(" ") +"<br>";
+                document.getElementById('round4').innerHTML += g1.join(" ") + '<br>' + g2.join(" ") +"<br>" + g3.join(" ") +"<br>";
+                document.getElementById('round5').innerHTML += y1.join(" ") + '<br>' + y2.join(" ") +"<br>" + y3.join(" ") +"<br>";
+                document.getElementById('round6').innerHTML += r1.join(" ") + '<br>' + r2.join(" ") +"<br>" + r3.join(" ");
         }
         
         var transStr = [];
@@ -83,20 +103,91 @@ CUBE : <input type="text" onclick="this.select()" id="val">
             var str = document.getElementById('val').value;
             var transStr = str.split(' ');
         for(i = 0; i < transStr.length; i++) {
-            if (transStr[i] === "U") {
-            var x = a1.shift();
-            a1.push(x);
-           } else if (transStr[i] === "U'") {
-            var x = a1.pop();
-            a1.unshift(x);
-           } else if(transStr[i] === "R") {
-            var x1 = a1.pop();
-            var x2 = a2.pop();
-            var x3 = a3.pop();
-            a1.push(x2);
-            a2.push(x3);
-            a3.push(x1);
-            } else if(transStr[i] === "R'") {
+            if (transStr[i] === "F") {
+                var x1 = w1.shift();
+                var x2 = w1.shift();
+                var x3 = w1.shift();
+                var x4 = w2.shift();
+                var x6 = w2.pop();
+                var x7 = w3.shift();
+                var x8 = w3.shift();
+                var x9 = w3.shift();
+                w1.push(x7);
+                w1.push(x4);
+                w1.push(x1);
+                w2.unshift(x8);
+                w2.push(x2);
+                w3.push(x9);
+                w3.push(x6);
+                w3.push(x3);
+            } else if (transStr[i] === "F'"){
+                var x1 = w1.shift();
+                var x2 = w1.shift();
+                var x3 = w1.shift();
+                var x4 = w2.shift();
+                var x6 = w2.pop();
+                var x7 = w3.shift();
+                var x8 = w3.shift();
+                var x9 = w3.shift();
+                w1.push(x3);
+                w1.push(x6);
+                w1.push(x9);
+                w2.unshift(x2);
+                w2.push(x8);
+                w3.push(x1);
+                w3.push(x4);
+                w3.push(x7);
+            } else if (transStr[i] === "R") {
+            var x1 = b1.pop();
+            var x2 = b2.pop();
+            var x3 = b3.pop();
+            var x4 = w1.pop();
+            var x5 = w2.pop();
+            var x6 = w3.pop();
+            var x7 = r1.pop();
+            var x8 = r2.pop();
+            var x9 = r3.pop();
+            var x10 = g1.pop();
+            var x11 = g2.pop();
+            var x12 = g3.pop();
+            b1.push(x4);
+            b2.push(x5);
+            b3.push(x6);
+            w1.push(x7);
+            w2.push(x8);
+            w3.push(x9);
+            g1.push(x3);
+            g2.push(x2);
+            g3.push(x1);
+            r1.push(x1);
+            r2.push(x2);
+            r3.push(x3);
+           } else if(transStr[i] === "R'") {
+            var x1 = b1.pop();
+            var x2 = b2.pop();
+            var x3 = b3.pop();
+            var x4 = w1.pop();
+            var x5 = w2.pop();
+            var x6 = w3.pop();
+            var x7 = r1.pop();
+            var x8 = r2.pop();
+            var x9 = r3.pop();
+            var x10 = g1.pop();
+            var x11 = g2.pop();
+            var x12 = g3.pop();
+            b1.push(x10);
+            b2.push(x11);
+            b3.push(x12);
+            w1.push(x1);
+            w2.push(x2);
+            w3.push(x3);
+            g1.push(x7);
+            g2.push(x8);
+            g3.push(x9);
+            r1.push(x4);
+            r2.push(x5);
+            r3.push(x6);
+           } else if(transStr[i] === "R'") {
             var x1 = a1.pop();
             var x2 = a2.pop();
             var x3 = a3.pop();
